--- a/index.html
+++ b/index.html
@@ -6,10 +6,31 @@
     <title>JS Frameworks MA1 Level 2</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/1cdba77912.js" crossorigin="anonymous"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="js/image-slider.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main>
-        <section class="container"></section>
+        <section class="container-fluid">
+            <h1 class="display-1 text-center">Simple Image Slider</h1>
+            <div class="d-flex justify-content-center">
+                <div id="slider">
+                    <a href="#" class="control_next"><i class="fas fa-chevron-circle-right"></i></a>
+                    <a href="#" class="control_prev"><i class="fas fa-chevron-circle-left"></i></a>
+                    <ul>
+                        <li><img src="img/slide01.jpg" alt="Graffiti 1"></li>
+                        <li><img src="img/slide02.jpg" alt="Graffiti 1"></li>
+                        <li><img src="img/slide03.jpg" alt="Graffiti 1"></li>
+                        <li><img src="img/slide04.jpg" alt="Graffiti 1"></li>
+                    </ul>  
+                </div>
+            </div>
+            <div class="slider_option">
+                <input type="checkbox" id="checkbox">
+                <label for="checkbox">Autoplay Slider</label>
+            </div>
+        </section>
     </main>
     
 
